--- a/paper/main/library.bib
+++ b/paper/main/library.bib
@@ -55,6 +55,53 @@
   url         = {https://www.abs.gov.au/statistics/standards/australian-statistical-geography-standard-asgs-edition-3/jul2021-jun2026/significant-urban-areas-urban-centres-and-localities-section-state/significant-urban-areas}
 }
 
+@article{Eccel_IJC_2012,
+  author  = {Eccel, Emanuele and Cau, Piero and Riemann-Campe, Kathrin and
+             Biasioli, Franco},
+  title   = {Quantitative hail monitoring in an alpine area: 35-year
+             climatology and links with atmospheric variables},
+  journal = IJC,
+  volume  = 3,
+  number  = 4,
+  pages   = {503-517},
+  doi     = {10.1002/joc.2291},
+  year    = 2012
+}
+
+@misc{SPC_SHIP,
+  title        = {Significant Hail Parameter},
+  author       = {{NOAA SPC}},
+  year         = {2022},
+  note         = {National Oceanographic and Atmospheric Administration National Weather Service Storm Prediction Center, accessed 21 June 2022},
+  howpublished = {\url{https://www.spc.noaa.gov/exper/mesoanalysis/help/help_sigh.html}}
+}
+
+@article{Kunz_NHESS_2007,
+  author  = {Kunz, M.},
+  title   = {The skill of convective parameters and indices to predict
+             isolated and severe thunderstorms},
+  journal = NHESS,
+  volume  = 7,
+  number  = 2,
+  pages   = {327-342},
+  issn    = {1561-8633},
+  doi     = {10.5194/nhess-7-327-2007},
+  year    = 2007
+}
+
+
+@article{Mohr_AR_2013,
+  author  = {Mohr, S. and Kunz, M.},
+  title   = {Recent trends and variabilities of convective parameters
+             relevant for hail events in {G}ermany and {E}urope},
+  journal = AR,
+  volume  = {123},
+  pages   = {211-228},
+  issn    = {0169-8095},
+  doi     = {10.1016/j.atmosres.2012.05.016},
+  year    = 2013
+}
+
 @article{Allen_AMOJ_2011,
   title     = {A severe thunderstorm climatology for {A}ustralia and
                associated thunderstorm environments},
